# MoreCompactProtocol.py

./: LICENSE  README.md  pyproject.toml
mcp/: mcp.py
